examples/test/testpolicy18625.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18625
  namespace: namespace71
spec:
  podSelector:
    matchLabels:
      key23: value45
      key12: value38
      key35: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value48
          key25: value29
          key28: value23
      podSelector:
        matchLabels:
          key18: value35
          key32: value28
          key15: value1
